# mult-modal-fsa

./: .env.example  .gitignore  FIX_APPLIED.md  README.md  pyproject.toml  requirements.txt
ai_core/: __init__.py
ai_core/agents/: director.py  field_agent.py  intent_classifier.py
ai_core/agents/tools/: image_renderer_tool.py  rag_tool.py  safety_tool.py  vision_tool.py
ai_core/models/: schemas.py
ai_core/rag/: embeddings.py  index_manager.py
ai_core/speech/: stt.py  tts.py
backend/: __init__.py  config.py  main.py
backend/dependencies/: tenant.py
backend/routers/: upload.py
data/cases/: past_cases.json
data/manuals/: X-450-Centrifugal-Pump-Manual.md
docker/: Dockerfile.backend  docker-compose.yml
docs/: ARCHITECTURE.md  EVALUATION.md  GETTING_STARTED.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
scripts/: ingest_data.py  run_demo.py
tests/: test_agent.py
